tests/should_fail/type_closure_capture_wrong_type.nv
module type_closure_captures_wrong_type

import super.std.core

// Closure tries to use captured Int as String
let num = 42
let bad = || {
    let s: String = num
}
bad()
